[gd_scene load_steps=6 format=3 uid="uid://dspj6gkwkq7ko"]

[ext_resource type="PackedScene" uid="uid://twouvei3cmnp" path="res://Scene/Entities/Entity.tscn" id="1_ij2m7"]
[ext_resource type="Script" path="res://Code/SceneCode/Entities/Player.gd" id="2_0rcg8"]
[ext_resource type="PackedScene" uid="uid://cpmeoneud23qm" path="res://Scene/Entities/PlayerMenu.tscn" id="3_1kcwe"]
[ext_resource type="Texture2D" uid="uid://bkxsl0ggqtckk" path="res://Themes/Gradients/Black.tres" id="3_geygg"]
[ext_resource type="Texture2D" uid="uid://b2jmmrkt8ei3e" path="res://Themes/Gradients/Blue.tres" id="4_avs2c"]

[node name="Player" groups=["Players"] instance=ExtResource("1_ij2m7")]
script = ExtResource("2_0rcg8")

[node name="HPBar" parent="." index="2"]
offset_bottom = 106.0

[node name="LPBar" type="TextureProgressBar" parent="." index="3"]
offset_left = -125.0
offset_top = 176.0
offset_right = 132.0
offset_bottom = 210.0
value = 100.0
texture_under = ExtResource("3_geygg")
texture_progress = ExtResource("4_avs2c")

[node name="RichTextLabel" type="RichTextLabel" parent="LPBar" index="0"]
layout_mode = 0
offset_right = 169.0
offset_bottom = 30.0
text = "LP: "

[node name="CanvasLayer" parent="." index="4" instance=ExtResource("3_1kcwe")]
visible = false
modulate = Color(1, 1, 1, 0.803922)
visibility_layer = 2
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 112.0
offset_top = 28.0
offset_right = 112.0
offset_bottom = 28.0

[node name="CurrentInfo" parent="." index="8"]
offset_right = 224.0

[connection signal="canPayFor" from="." to="CanvasLayer" method="_on_player_can_pay_for"]
[connection signal="selectedAgain" from="." to="CanvasLayer" method="_on_player_selected_again"]
[connection signal="Attack" from="CanvasLayer" to="." method="_on_canvas_layer_attack"]
[connection signal="Focusing" from="CanvasLayer" to="." method="_on_canvas_layer_focusing"]
[connection signal="Item" from="CanvasLayer" to="." method="_on_canvas_layer_item"]
[connection signal="Skill" from="CanvasLayer" to="." method="_on_canvas_layer_skill"]
[connection signal="Tactic" from="CanvasLayer" to="." method="_on_canvas_layer_tactic"]
[connection signal="cancel" from="CanvasLayer" to="." method="_on_canvas_layer_cancel"]
